--- a/inst/extdata/exam_files/templates/Exams_Template.html
+++ b/inst/extdata/exam_files/templates/Exams_Template.html
@@ -17,6 +17,12 @@ body{font-family:Arial;}
 <div style="background-color:#cccccc;color:black;padding:15px; border-style: groove">
 
  <h3>Information about Exercise</h3>
+ 
+ <!--
+<br>
+<a href="https://www.msperlin.com/blog/publication/2020_book-afedr-en/"><img src="https://i.imgur.com/0iqeAGw.jpg" title="Book Cover" style="width:150px;height:200px" /></a>
+<br>
+-->
 
 <p>Class Name: CLASS_NAME </p>
 <p>Exercise Name: EXAM_NAME </p> 
@@ -36,13 +42,15 @@ EXAM_LINKS
 <h3>Notes:</h3>
 
 <ul>
-    <li>All exercises displayed here part of the book "Analyzing Financial and Economic Data with R", available in <a href = "https://www.msperlin.com/blog/publication/2020_book-afedr-en/">Amazon.com</a>.</li>
+    <li>All exercises displayed here part of the book "Analyzing Financial and Economic Data with R", available in <a href = "https://www.msperlin.com/blog/publication/2020_book-afedr-en/">Amazon.com</a>.
+    </li>
+    
 
     <li>
         All data files required for solving the exercises are available with Github package <code>afedR</code>. So, first install the package with command <code>devtools::install_github('msperlin/afedR")</code> and, as an example for reading a table from file "example.rds", simply type:
 
         <p> 
-            <code>df <- afedR::afedR_get_data_file('example.rds')</code>
+            <code>df <- readRDS(afedR::afedR_get_data_file('example.rds'))</code>
         </p> 
     </li>
   </ul>
